about me section

--- a/my_portfolio/public/index.html
+++ b/my_portfolio/public/index.html
@@ -27,8 +27,8 @@
 		/>
 
 		<link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-		
-		<title>React App</title>
+
+		<title>Nedim Omerovic - Portfolio</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
