--- a/my_portfolio/public/index.html
+++ b/my_portfolio/public/index.html
@@ -27,6 +27,7 @@
 		/>
 
 		<link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+		<link rel='stylesheet' href='../src/css/index.css'>
 
 		<title>Nedim Omerovic - Portfolio</title>
 	</head>
