--- a/my_portfolio/public/index.html
+++ b/my_portfolio/public/index.html
@@ -29,6 +29,13 @@
 		<link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 		<link rel='stylesheet' href='../src/css/index.css'>
 
+		<script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+		<script type="text/javascript">
+		(function(){
+			emailjs.init("user_zHXZbcrZAQtCtTpoktzEk");
+		})();
+		</script>
+
 		<title>Nedim Omerovic - Portfolio</title>
 	</head>
 	<body>
