--- a/my_portfolio/public/index.html
+++ b/my_portfolio/public/index.html
@@ -5,6 +5,8 @@
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Nedim Omerovic software development portfolio website. A wide variety of projects which include Web Applications as well as game prototypes built using Unity game engine and also the XNA framework." />
+		<meta name="keywords" content="Nedim, Omerovic, software, engineer, developer, programmer, games, web, app, react, animation, redux, hooks, canvas, unity" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
